--- a/src/AlgoVisual/Layout/Footer/Footer.css
+++ b/src/AlgoVisual/Layout/Footer/Footer.css
@@ -49,3 +49,14 @@
 .social-text {
     padding: 0 15px 0 3px;
 }
+
+@media (max-width: 500px){
+    #footer-header {
+        font-size: 15px;
+    }
+
+    #contact-wrapper ul li {
+        padding: 0;
+        font-size: 10px;
+    }
+}
