--- a/src/AlgoVisual/Layout/Main/Home/Home.css
+++ b/src/AlgoVisual/Layout/Main/Home/Home.css
@@ -20,7 +20,7 @@
     text-align: center;
     font-size: 20px;
     padding: 10px;
-    width: 38vw;
+    width: 600px;
 }
 
 #buttons-menu {
@@ -39,10 +39,16 @@
     border-radius: 5px;
     cursor: pointer;
     text-align: center;
-
 }
 
 .home-section:hover {
     color: #98d6e8;
     transition: all 150ms linear;
+}
+
+@media (max-width: 500px){
+    #home-text {
+        text-align: center;
+        width: initial;
+    }
 }
