--- a/src/AlgoVisual/Layout/Main/Documentation/Layout/Documentation.css
+++ b/src/AlgoVisual/Layout/Main/Documentation/Layout/Documentation.css
@@ -1,12 +1,20 @@
-#documentation-wrapper {
-    display: flex;
-    align-items: center;
-    flex: 1;
-}
-
 .sidebar {
     display: flex;
     justify-content: flex-start;
+}
+
+.documentation-wrapper {
+    display: flex;
+    overflow: auto;
+    margin: 0 auto;
+}
+
+.documentation {
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+    width: 800px;
+    min-width: 0;
 }
 
 #documentation-section {
