--- a/src/AlgoVisual/Layout/Main/PathfindingVisualizer/Node/GridNode.css
+++ b/src/AlgoVisual/Layout/Main/PathfindingVisualizer/Node/GridNode.css
@@ -3,15 +3,15 @@
     height: 20px;
     justify-content: flex-end;
     align-items: center;
-    border: 1px solid grey;
+    border: 1px solid #8dc3e7;
 }
 
 .node-finish {
-    background-color: red;
+    background-color: #aeefc3;
 }
 
 .node-start {
-    background-color: green;
+    background-color: #a6def6;
 }
 
 .node-visited {
@@ -27,27 +27,48 @@
 @keyframes visitedAnimation {
     0% {
         transform: scale(0.3);
-        background-color: rgba(0, 0, 66, 0.75);
+        background-color: #98d6e8;
         border-radius: 100%;
     }
 
     50% {
-        background-color: rgba(17, 104, 217, 0.75);
+        background-color: #8dc3e7;
     }
 
     75% {
         transform: scale(1.2);
-        background-color: rgba(0, 217, 159, 0.75);
+        background-color: #8be5cc;
     }
 
     100% {
         transform: scale(1);
-        background-color: rgba(0, 190, 218, 0.75);
+        background-color: #98d6e8;
     }
 }
 
 .node-wall {
-    background-color: rgb(12, 53, 71);
+    background-color: #33435d;
+    border: 1px solid #33435d;
+    animation-name: nodeWall;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
+    animation-delay: 20ms;
+    animation-direction: alternate;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    animation-play-state: running;
+}
+
+@keyframes nodeWall {
+    0% {
+        transform: scale(0.6);
+    }
+    50% {
+        transform: scale(1.3);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
 
 .node-shortest-path {
@@ -63,16 +84,16 @@
 @keyframes shortestPath {
     0% {
         transform: scale(0.6);
-        background-color: rgb(255, 254, 106);
+        background-color: #fffe6a;
     }
 
     50% {
-        transform: scale(1.2);
-        background-color: rgb(255, 254, 106);
+        transform: scale(1.3);
+        background-color: #fffe6a;
     }
 
     100% {
         transform: scale(1);
-        background-color: rgb(255, 254, 106);
+        background-color: #fffe6a;
     }
 }
