--- a/src/AlgoVisual/Layout/Main/PathfindingVisualizer/Node/GridNode.css
+++ b/src/AlgoVisual/Layout/Main/PathfindingVisualizer/Node/GridNode.css
@@ -4,6 +4,7 @@
     justify-content: flex-end;
     align-items: center;
     border: 1px solid #8dc3e7;
+    touch-action: none;
 }
 
 .node-finish {
@@ -43,6 +44,7 @@
     100% {
         transform: scale(1);
         background-color: #98d6e8;
+        border: 1px solid #98d6e8;
     }
 }
 
@@ -72,13 +74,27 @@
 }
 
 .node-shortest-path {
-    animation-name: shortestPath;
-    animation-duration: 1.5s;
-    animation-timing-function: ease-out;
-    animation-direction: alternate;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-    animation-play-state: running;
+    animation-name: shortestPath, idleShortestPath;
+    background-color: #fffe6a;
+    border: 1px solid #fffe6a;
+    animation-duration: 1.5s, 3s;
+    animation-timing-function: ease-out, ease-in;
+    animation-direction: alternate, alternate;
+    animation-iteration-count: 1, infinite;
+    animation-fill-mode: forwards, forwards;
+    animation-play-state: running, running;
+}
+
+@keyframes idleShortestPath {
+    50% {
+        background-color: #fd9b9b;
+        border: 1px solid #fd9b9b;
+    }
+
+    100% {
+        background-color: #fffe6a;
+        border: 1px solid #fffe6a;
+    }
 }
 
 @keyframes shortestPath {
