Refactored sorting visualizer and entire code to use hooks

--- a/src/AlgoVisual/Layout/Main/PathfindingVisualizer/Node/GridNode.css
+++ b/src/AlgoVisual/Layout/Main/PathfindingVisualizer/Node/GridNode.css
@@ -44,7 +44,7 @@
     100% {
         transform: scale(1);
         background-color: #98d6e8;
-        border: 1px solid #98d6e8;
+        border: 1px solid #8dc3e7;
     }
 }
 
