Switched over to react router v6

--- a/src/AlgoVisual/App.css
+++ b/src/AlgoVisual/App.css
@@ -85,11 +85,12 @@ html, body {
     -webkit-user-select: none; /* Safari */
     -moz-user-select: none; /* Old versions of Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome, Edge, Opera and Firefox */
+    user-select: none;
+    /* Non-prefixed version, currently
+                                     supported by Chrome, Edge, Opera and Firefox */
 }
 
-@media (max-width: 500px){
+@media (max-width: 500px) {
     .sidebar {
         width: 100px;
     }
