--- a/src/AlgoVisual/Layout/Main/PathfindingVisualizer/Node/GridNode.css
+++ b/src/AlgoVisual/Layout/Main/PathfindingVisualizer/Node/GridNode.css
@@ -7,28 +7,90 @@
     touch-action: none;
 }
 
-.node-finish {
-    background-color: #aeefc3;
-}
-
 .node-start {
     background-color: #a6def6;
+    animation-name: startAnimation;
+    animation-duration: 800ms;
+    animation-timing-function: ease-out;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes startAnimation {
+    0% {
+        transform: scale(0.4);
+        border-radius: 100%;
+    }
+
+    75% {
+        transform: scale(1.2);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+.node-finish {
+    background-color: #9ff8c8;
+    animation-name: finishAnimation;
+    animation-duration: 800ms;
+    animation-timing-function: ease-out;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes finishAnimation {
+    0% {
+        transform: scale(0.4);
+        border-radius: 100%;
+    }
+
+    75% {
+        transform: scale(1.2);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+.node-wall {
+    background-color: #33435d;
+    border: 1px solid #33435d;
+    animation-name: wallAnimation;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
+    animation-direction: alternate;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes wallAnimation {
+    0% {
+        transform: scale(0.6);
+    }
+    50% {
+        transform: scale(1.3);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
 
 .node-visited {
     animation-name: visitedAnimation;
     animation-duration: 1.5s;
     animation-timing-function: ease-out;
-    animation-direction: alternate;
+    animation-direction: normal;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
-    animation-play-state: running;
 }
 
 @keyframes visitedAnimation {
     0% {
         transform: scale(0.3);
-        background-color: #98d6e8;
+        background-color: #a6def6;
         border-radius: 100%;
     }
 
@@ -43,49 +105,23 @@
 
     100% {
         transform: scale(1);
-        background-color: #98d6e8;
+        background-color: #a6def6;
         border: 1px solid #8dc3e7;
     }
 }
 
-.node-wall {
-    background-color: #33435d;
-    border: 1px solid #33435d;
-    animation-name: nodeWall;
-    animation-duration: 1s;
-    animation-timing-function: ease-out;
-    animation-delay: 20ms;
-    animation-direction: alternate;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-    animation-play-state: running;
-}
-
-@keyframes nodeWall {
-    0% {
-        transform: scale(0.6);
-    }
-    50% {
-        transform: scale(1.3);
-    }
-    100% {
-        transform: scale(1);
-    }
-}
-
 .node-shortest-path {
-    animation-name: shortestPath, idleShortestPath;
+    animation-name: shortestPathAnimation, idleShortestPathAnimation;
     background-color: #fffe6a;
     border: 1px solid #fffe6a;
-    animation-duration: 1.5s, 6s;
+    animation-duration: 1s, 6s;
     animation-timing-function: ease-out, linear;
     animation-direction: alternate, alternate;
     animation-iteration-count: 1, infinite;
     animation-fill-mode: forwards, forwards;
-    animation-play-state: running, running;
 }
 
-@keyframes idleShortestPath {
+@keyframes idleShortestPathAnimation {
     50% {
         background-color: #fd9b9b;
         border: 1px solid #fd9b9b;
@@ -97,7 +133,7 @@
     }
 }
 
-@keyframes shortestPath {
+@keyframes shortestPathAnimation {
     0% {
         transform: scale(0.6);
         background-color: #fffe6a;
