--- a/src/AlgoVisual/Layout/Main/PathfindingVisualizer/Node/GridNode.css
+++ b/src/AlgoVisual/Layout/Main/PathfindingVisualizer/Node/GridNode.css
@@ -59,6 +59,7 @@
     background-color: #33435d;
     border: 1px solid #33435d;
     animation-name: wallAnimation;
+    animation-delay: 50ms;
     animation-duration: 1s;
     animation-timing-function: ease-out;
     animation-direction: alternate;
@@ -77,6 +78,32 @@
         transform: scale(1);
     }
 }
+
+.node-weight {
+    background-color: #ffa6a4;
+    border: 1px solid #ffa6a4;
+    animation-name: weightAnimation;
+    animation-delay: 50ms;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
+    animation-direction: alternate;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes weightAnimation {
+    0% {
+        transform: scale(0.6);
+    }
+    50% {
+        transform: scale(1.3);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+
 
 .node-visited {
     animation-name: visitedAnimation;
