--- a/src/AlgoVisual/Layout/Main/PathfindingVisualizer/Node/GridNode.css
+++ b/src/AlgoVisual/Layout/Main/PathfindingVisualizer/Node/GridNode.css
@@ -1,7 +1,7 @@
 .node {
     width: 20px;
     height: 20px;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     border: 1px solid #8dc3e7;
     touch-action: none;
@@ -10,7 +10,7 @@
 .node-start {
     background-color: #a6def6;
     animation-name: startAnimation;
-    animation-duration: 800ms;
+    animation-duration: 1s;
     animation-timing-function: ease-out;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
@@ -34,7 +34,7 @@
 .node-finish {
     background-color: #9ff8c8;
     animation-name: finishAnimation;
-    animation-duration: 800ms;
+    animation-duration: 1s;
     animation-timing-function: ease-out;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
@@ -79,9 +79,13 @@
     }
 }
 
+.node-weight-image {
+    object-fit: contain;
+    height: 100%;
+    filter: invert(94%) sepia(53%) saturate(7246%) hue-rotate(292deg) brightness(99%) contrast(104%);
+}
+
 .node-weight {
-    background-color: #ffa6a4;
-    border: 1px solid #ffa6a4;
     animation-name: weightAnimation;
     animation-delay: 50ms;
     animation-duration: 1s;
@@ -94,20 +98,53 @@
 @keyframes weightAnimation {
     0% {
         transform: scale(0.6);
+        border: 1px solid #fff;
     }
     50% {
-        transform: scale(1.3);
+        transform: scale(1);
+        border: 1px solid #fff;
     }
     100% {
         transform: scale(1);
+        border: 1px solid #8dc3e7;
+    }
+}
+
+.node-weight-visited {
+    animation-name: visitedWeightAnimation;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
+    animation-direction: normal;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes visitedWeightAnimation {
+    0% {
+        transform: scale(0.3);
+        background-color: #a6def6;
+    }
+
+    50% {
+        background-color: #8dc3e7;
+    }
+
+    75% {
+        transform: scale(1.2);
+        background-color: #8be5cc;
+    }
+
+    100% {
+        transform: scale(1);
+        background-color: #a6def6;
+        border: 1px solid #8dc3e7;
     }
 }
 
 
-
 .node-visited {
     animation-name: visitedAnimation;
-    animation-duration: 1.5s;
+    animation-duration: 1s;
     animation-timing-function: ease-out;
     animation-direction: normal;
     animation-iteration-count: 1;
@@ -139,9 +176,9 @@
 
 .node-shortest-path {
     animation-name: shortestPathAnimation, idleShortestPathAnimation;
-    background-color: #fffe6a;
-    border: 1px solid #fffe6a;
-    animation-duration: 1s, 6s;
+    background-color: #efee90;
+    border: 1px solid #efee90;
+    animation-duration: 1s, 2s;
     animation-timing-function: ease-out, linear;
     animation-direction: alternate, alternate;
     animation-iteration-count: 1, infinite;
@@ -150,13 +187,13 @@
 
 @keyframes idleShortestPathAnimation {
     50% {
-        background-color: #fd9b9b;
-        border: 1px solid #fd9b9b;
+        background-color: #fcda9f;
+        border: 1px solid #fcda9f;
     }
 
     100% {
-        background-color: #fffe6a;
-        border: 1px solid #fffe6a;
+        background-color: #e2ff7b;
+        border: 1px solid #e2ff7b;
     }
 }
 
@@ -164,15 +201,18 @@
     0% {
         transform: scale(0.6);
         background-color: #fffe6a;
+        border: 1px solid #fffe6a;
     }
 
     50% {
         transform: scale(1.3);
         background-color: #fffe6a;
+        border: 1px solid #fffe6a;
     }
 
     100% {
         transform: scale(1);
         background-color: #fffe6a;
+        border: 1px solid #fffe6a;
     }
 }
