--- a/src/AlgoVisual/Layout/Main/Home/Home.css
+++ b/src/AlgoVisual/Layout/Main/Home/Home.css
@@ -47,8 +47,17 @@
 }
 
 @media (max-width: 500px){
+    #home-header-text {
+        font-size: 35px;
+    }
+
     #home-text {
         text-align: center;
         width: initial;
+        font-size: 15px;
+    }
+
+    .home-section {
+        font-size: 15px;
     }
 }
