--- a/src/AlgoVisual/Layout/Footer/Footer.css
+++ b/src/AlgoVisual/Layout/Footer/Footer.css
@@ -14,7 +14,7 @@
 
 #footer-header {
     font-size: 20px;
-    margin: 0;
+    margin: 5px 0;
 }
 
 #contact-wrapper {
@@ -50,7 +50,41 @@
     padding: 0 15px 0 3px;
 }
 
-@media (max-width: 500px){
+.copied-parent {
+    position: relative;
+    padding: 50px;
+}
+
+.copied {
+    position: absolute;
+    top: -30px;
+    left: -30px;
+    background-color: #2c537e;
+    width: 150px;
+    padding: 5px;
+    border-radius: 5px;
+    animation: copyToClipboard;
+    animation-duration: 1500ms;
+    animation-timing-function: ease-in;
+    animation-iteration-count: initial;
+    animation-fill-mode: forwards;
+}
+
+.copied-text {
+    text-align: center;
+}
+
+@keyframes copyToClipboard {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+@media (max-width: 500px) {
     #footer-header {
         font-size: 15px;
     }
